Bug 257326 - KDE daemon crashes on logout
Summary: KDE daemon crashes on logout
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: powermanagement-daemon (other bugs)
Version First Reported In: unspecified
Platform: Exherbo Linux
: NOR crash
Target Milestone: ---
Assignee: Dario Freddi
URL:
Keywords:
: 257470 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-19 15:33 UTC by Robin Green
Modified: 2010-11-28 15:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robin Green 2010-11-19 15:33:21 UTC
Application: kded4 ($Id: kded.cpp 1192875 2010-11-04 08:22:15Z ervin $)
KDE Platform Version: 4.5.76 (4.6 >= 20101111)
Qt Version: 4.7.0
Operating System: Linux 2.6.31.12-174.2.22.fc12.i686.PAE i686
Distribution (Platform): Exherbo Packages

-- Information about the crash:
- What I was doing when the application crashed:
Trying to log out.

I didn't manage to log out, because the KDE daemon crashed.

-- Backtrace:
Application: KDE Daemon (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#7  0x0016ea98 in QDBusServiceWatcher::addWatchedService(QString const&) () from /usr/lib/qt4/libQtDBus.so.4
#8  0x05a4cc49 in PowerDevil::PolicyAgent::AddInhibition(unsigned int, QString const&, QString const&) () from /usr/lib/libpowerdevilcore.so
#9  0x05a53824 in PowerManagementPolicyAgentAdaptor::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libpowerdevilcore.so
#10 0x00130181 in QDBusConnectionPrivate::deliverCall(QObject*, int, QDBusMessage const&, QList<int> const&, int) () from /usr/lib/qt4/libQtDBus.so.4
#11 0x001312e6 in QDBusConnectionPrivate::activateCall(QObject*, int, QDBusMessage const&) () from /usr/lib/qt4/libQtDBus.so.4
#12 0x00131d98 in QDBusConnectionPrivate::activateObject(QDBusConnectionPrivate::ObjectTreeNode&, QDBusMessage const&, int) () from /usr/lib/qt4/libQtDBus.so.4
#13 0x0013202a in QDBusActivateObjectEvent::placeMetaCall(QObject*) () from /usr/lib/qt4/libQtDBus.so.4
#14 0x00d29b1a in QObject::event(QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#15 0x010cdb74 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#16 0x010d4a7e in QApplication::notify(QObject*, QEvent*) () from /usr/lib/qt4/libQtGui.so.4
#17 0x0071764b in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#18 0x00d176f2 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#19 0x00d1a94a in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/qt4/libQtCore.so.4
#20 0x00d1ab0e in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/qt4/libQtCore.so.4
#21 0x00d46965 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib/qt4/libQtCore.so.4
#22 0x05e8e18c in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#23 0x05e920f8 in g_main_context_iterate () from /usr/lib/libglib-2.0.so.0
#24 0x05e922e9 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#25 0x00d46416 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#26 0x0118dc76 in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtGui.so.4
#27 0x00d1615a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#28 0x00d165da in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#29 0x00d1abd1 in QCoreApplication::exec() () from /usr/lib/qt4/libQtCore.so.4
#30 0x010cdc18 in QApplication::exec() () from /usr/lib/qt4/libQtGui.so.4
#31 0x0235e304 in kdemain () from /usr/lib/libkdeinit4_kded4.so
#32 0x0804ebb1 in launch(int, char const*, char const*, char const*, int, char const*, bool, char const*, bool, char const*) ()
#33 0x080507e0 in main ()

Reported using DrKonqi
Comment 1 Dario Freddi 2010-11-28 15:44:34 UTC
*** Bug 257470 has been marked as a duplicate of this bug. ***
Comment 2 Dario Freddi 2010-11-28 15:55:36 UTC
SVN commit 1201738 by dafre:

BUG: 257326

Be safer when initializing the bus watcher and make sure we protect each call correctly

 M  +14 -9     powerdevilpolicyagent.cpp  
 M  +2 -1      powerdevilpolicyagent.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201738