BUG: 257326

Be safer when initializing the bus watcher and make sure we protect each call correctly

svn path=/trunk/KDE/kdebase/workspace/; revision=1201738